--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
         <p>
             {{ form.name.label }}<br>
             {{ form.name(size=32) }}
-            {{% for error in form.name.errors %} # Отображение ошибок валидации
+            {% for error in form.name.errors %} # Отображение ошибок валидации
                 <span style="color: red;">[{{ error }}]</span>
-            {{% endfor %}
+            {% endfor %}
         </p>
         <p>
             {{ form.submit() }}
